# lingopilot-tts-kokoro

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENSES.txt  build_windows.ps1  deny.toml  release-notes-v0.1.1.md  release-sources.toml
.github/workflows/: ci.yml  release.yml
benches/: baseline.json  synth.rs
packaging/windows/: README.md
scripts/: Assert-ForbiddenCargoLockCrates.ps1  Assert-OrtPinParity.ps1  Assert-ReleaseAssetConfiguration.ps1  Assert-ReleaseTagMatchesVersion.ps1  Assert-StagedLayout.ps1  Compare-BenchBaseline.ps1  Get-ReleaseAssetPlan.ps1  Package-LinuxRelease.ps1  Package-MacOSRelease.ps1  Package-PosixRelease.ps1  Package-WindowsRelease.ps1  Play-AllLanguages.ps1  Play-PortugueseVoices.ps1  ReleasePackaging.Common.ps1  Run-LiveSmoke.ps1  Stage-PosixReleaseAssets.ps1  Stage-WindowsReleaseAssets.ps1  Test-LiveAssets.ps1  Test-PreReleaseLocal.ps1  Test-PublishedRelease.ps1  Test-ReleaseSmokeGate.ps1  Test-WindowsReleaseArchive.ps1  Update-AudioFingerprint.ps1  Update-BenchBaseline.ps1  Verify-Readiness.ps1
src/: kokoro_vocab.json  kokoro_vocab.rs  lib.rs  live_test_support.rs  main.rs  protocol.rs  synthesis.rs
tests/: live_assets.rs  phonemizer_espeak_backcompat.rs  ping_contract.rs  play_all_languages.rs  release_staging_env.rs  request_contract.rs
tests/fixtures/: af_heart_hello.json
tests/support/: fingerprint.rs  sidecar.rs
