[package]
name = "lingopilot-tts-kokoro"
version = "0.1.0"
edition = "2021"
description = "A local TTS sidecar scaffold that preserves the JSON/PCM wire protocol while migrating from Piper to Kokoro."
license = "Apache-2.0"
repository = "https://github.com/lingopilot-ai/lingopilot-tts-kokoro"
authors = ["LingoPilot Labs", "Paulo Corcino"]

[[bin]]
name = "lingopilot-tts-kokoro"
path = "src/main.rs"

[dependencies]
libloading = "0.8"
ndarray = "0.17.1"
ndarray-npy = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-24", "load-dynamic", "ndarray", "std", "directml"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-24", "load-dynamic", "ndarray", "std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tiny_http = "0.12"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[[bench]]
name = "synth"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
